src/objects/InternalEvent__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>町名・番地</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>市区群</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>概要</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>開催日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>注意点</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>場所</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Needs__c</fullName>
        <label>ニーズ・対象</label>
        <picklist>
            <picklistValues>
                <fullName>マーケティング</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ソーシャルメディア</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ファイナンス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>マネージメント</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>プログラミング</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>モバイル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ウェブデザイン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web開発</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>オペレーション</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ソリューション営業</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>エンタープライズアーキテクチャ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>都道府県</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Logged__c</fullName>
        <label>総消費時間</label>
        <summarizedField>InternalEventAttendee__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>InternalEventAttendee__c.InternalEvent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>社内行事</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Date__c</columns>
        <columns>Description__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
    </listViews>
    <listViews>
        <fullName>AllDetail</fullName>
        <columns>NAME</columns>
        <columns>Event_Date__c</columns>
        <columns>Description__c</columns>
        <columns>City__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて詳細</label>
    </listViews>
    <nameField>
        <label>社内行事名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>